force-app/main/default/objects/b3d__Collaborator__c/b3d__Collaborator__c.object-meta.xml
<CustomObject>
    <label>Collaborator</label>
    <nameField>
        <displayFormat>COL-{0}</displayFormat>
        <label>Collaborator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaborators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>