force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Can_Discard_Changes__c.field-meta.xml
<CustomField>
    <fullName>b3d__Can_Discard_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Discard Changes</label>
    <type>Checkbox</type>
</CustomField>