force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Can_Make_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>b3d__Can_Make_Suggestions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Make Suggestions</label>
    <type>Checkbox</type>
</CustomField>