force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3d__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Collaborators</relationshipLabel>
    <relationshipName>Collaborators</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>