force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Data_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>b3d__Data_Version_ID__c</fullName>
    <label>Data Version ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>