force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Document_Successfully_Rendered__c.field-meta.xml
<CustomField>
    <fullName>b3d__Document_Successfully_Rendered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Successfully Rendered</label>
    <type>Checkbox</type>
</CustomField>