force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>b3d__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>