force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>b3d__Fingerprint__c</fullName>
    <label>Fingerprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>