force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Has_Error__c.field-meta.xml
<CustomField>
    <fullName>b3d__Has_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Error</label>
    <type>Checkbox</type>
</CustomField>