force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Magic_Link_Sign__c.field-meta.xml
<CustomField>
    <fullName>b3d__Magic_Link_Sign__c</fullName>
    <formula>b3d__Redline_Request__r.b3d__Template__r.b3d__Site__c&amp; &quot;/apex/b3d__Document?collaborator=&quot; &amp; b3d__Slug__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magic Link (Sign)</label>
    <type>Text</type>
</CustomField>