force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>b3d__Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>