force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Order__c.field-meta.xml
<CustomField>
    <fullName>b3d__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>