force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Read_Only__c.field-meta.xml
<CustomField>
    <fullName>b3d__Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>