force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Signed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>b3d__Signed_Timestamp__c</fullName>
    <label>Signed Timestamp</label>
    <type>DateTime</type>
</CustomField>