force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Slug__c.field-meta.xml
<CustomField>
    <fullName>b3d__Slug__c</fullName>
    <label>Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>