force-app/main/default/objects/b3d__Collaborator__c/fields/b3d__Status__c.field-meta.xml
<CustomField>
    <fullName>b3d__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Ready to Sign</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>